<resources>
    <string name="app_name">battleship</string>
    <string name="hint_player1">Player #1 name</string>
    <string name="hint_player2">Player #2 name</string>
    <string name="btn_place_ok">Ok</string>
    <string name="btn_ship_erase">Erase</string>
    <string name="btn_ship_rotate">Rotate</string>
    <string name="ship_size_2">Destroyer (2)</string>
    <string name="ship_size_3">Submarine (3)</string>
    <string name="ship_size_4">Battleship (4)</string>
    <string name="ship_size_5">Carrier (5)</string>
    <string name="btn_main_play">Play</string>
    <string name="btn_set_players_start">Start</string>
    <string name="hand_over"><br>Hand over\n</br> <br>the phone!</br></string>
    <string name="btn_player_middle_screen">Player:</string>
</resources>