<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PlaceShipsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="60"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.example.battleship.views.ShipBoardsView
                    android:id="@+id/view_board"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="19dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_place_ships_player_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="Sonicka hraje"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="30"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="50">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_five_ship"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="0dip"
                        android:minWidth="0dip"
                        android:text="@string/ship_size_5"
                        android:textSize="12dip"
                        app:layout_constraintStart_toStartOf="@+id/txt_place_ships_player_name"
                        app:layout_constraintTop_toBottomOf="@+id/txt_place_ships_player_name" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_four_ship"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ship_size_4"
                        android:minHeight="0dip"
                        android:minWidth="0dip"
                        android:textSize="12dip"
                        app:layout_constraintBaseline_toBaselineOf="@+id/btn_erase_ship"
                        app:layout_constraintStart_toStartOf="@+id/btn_five_ship" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_three_ship"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ship_size_3"
                        android:minHeight="0dip"
                        android:minWidth="0dip"
                        android:textSize="12dip"
                        app:layout_constraintStart_toStartOf="@+id/btn_four_ship"
                        app:layout_constraintTop_toBottomOf="@+id/btn_four_ship" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_two_ship"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ship_size_2"
                        android:minHeight="0dip"
                        android:minWidth="0dip"
                        android:textSize="12dip"
                        app:layout_constraintStart_toStartOf="@+id/btn_three_ship"
                        app:layout_constraintTop_toBottomOf="@+id/btn_three_ship" />

                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_weight="50">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:baselineAligned="true">

                    <Button
                        android:id="@+id/btn_rotate_ship"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="@string/btn_ship_rotate"
                        android:backgroundTint="@color/secondary"
                        app:layout_constraintBottom_toTopOf="@+id/btn_four_ship"
                        app:layout_constraintStart_toEndOf="@+id/btn_four_ship" />

                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_erase_ship"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="@string/btn_ship_erase"
                        android:backgroundTint="@color/secondary"
                        app:layout_constraintBottom_toTopOf="@+id/btn_place_ships_ok"
                        app:layout_constraintStart_toEndOf="@+id/btn_four_ship" />

                </TableRow>

            </TableLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="7"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_place_ships_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="10"
                android:backgroundTint="@color/colorSuccess"
                android:text="@string/btn_place_ok"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_erase_ship" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>